--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="number" name="phone" />
       <input type="email" name="email" />
-      <input type="number" name="number" />
       <input type="text" name="message" />
     </form>
     <div id="root"></div>
