--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="number" name="phone" />
-      <input type="email" name="email" />
-      <input type="text" name="message" />
+    <form name="contact" data-netlify="true" hidden>
+      <div>
+        <input type="number" id="phone" name="phone" />
+      </div>
+      <div>
+        <input type="email" id="email" name="email" />
+      </div>
+      <div>
+        <input id="message" name="message" />
+      </div>
     </form>
     <div id="root"></div>
 
